experiments/cni/e10-calico-vxlan/evidence/policy-default-deny-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"net-lab"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-08-05T17:46:09Z"
  generation: 1
  name: default-deny-ingress
  namespace: net-lab
  resourceVersion: "6475"
  uid: 32a75539-fb5a-43ef-ac89-2d69ed4ccbf4
spec:
  podSelector: {}
  policyTypes:
  - Ingress
