experiments/cni/e10-calico-vxlan/evidence/policy-default-deny-plus-allow-api.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-client-to-http-servers","namespace":"net-lab"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{"app.kubernetes.io/name":"network-client"}}}],"ports":[{"port":8080,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"http-server"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-08-05T17:47:29Z"
    generation: 1
    name: allow-client-to-http-servers
    namespace: net-lab
    resourceVersion: "6557"
    uid: 6bfee6aa-3bb3-4fdd-870f-8a3e6f76841d
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: network-client
      ports:
      - port: 8080
        protocol: TCP
    podSelector:
      matchLabels:
        app.kubernetes.io/name: http-server
    policyTypes:
    - Ingress
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"net-lab"},"spec":{"podSelector":{},"policyTypes":["Ingress"]}}
    creationTimestamp: "2026-08-05T17:46:09Z"
    generation: 1
    name: default-deny-ingress
    namespace: net-lab
    resourceVersion: "6475"
    uid: 32a75539-fb5a-43ef-ac89-2d69ed4ccbf4
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
